--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>SonarQubeDem</artifactId>
+    <artifactId>jenkins-maven-example</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
     <dependency>
@@ -20,17 +20,12 @@
             <artifactId>sonar-maven-plugin</artifactId>
             <version>3.8.0.2131</version>
         </dependency>
-
-
     </dependencies>
-
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
 
 </project>
